--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -1,6 +1,7 @@
 <nav class="navbar">
-  <a href="/" class="navbar-logo">
-    <img src="{{ url_for('static', filename='img/logo-white.svg') }}" alt="PureFyul" style="height: 32px; width: auto;">
+  <a class="navbar-brand" href="{{ url_for('index') }}">
+    <span class="brand-name">PureFyul</span>
+    <span class="beta-badge" aria-label="Beta">BETA</span>
   </a>
   <div class="navbar-nav">
     <a href="/about">About</a>
